2015-05-22  Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSGState.m (_fillRect:withPattern:): Add support for
	patternPhase.
	Patch by Josh Freeman <gnustep_lists@twilightedge.com>

2015-05-18 Riccardo Mottola <rm@gnu.org>

	* GNUmakefile.postamble
	Correctly run config.status again.

2015-05-16  Richard Frith-Macdonald <rfm@gnu.org>

        * Documentation/news.texi:
        * ANNOUNCE:
        * NEWS:
        * README:
        * Version:
	Bugfix release 0.24.1

2015-05-13 Riccardo Mottola <rm@gnu.org>

        * configure.ac
        Copied from base: only warn if compiler is different from the one
	configured in make
        * configure
        regenerated

2015-05-12 Riccardo Mottola <rm@gnu.org>

	* configure.ac
	pick up gnustep make configured CC, CPP, CXX and check they are
	consistent with how make was configured
	* configure
	regenerated

2015-03-31  Germán Arias <germanandre@gmx.es>

	* Source/win32/WIN32Server.m (-windowEventProc:, -process_mouse_event:):
	Start tracking the mouse at the first mouse movement (as suggested in
	a note at MSDN documentation) so the window receives the WM_MOUSELEAVE
	message when the mouse leave the client area. I don't use the message
	WM_NCMOUSEMOVE, as suggested by Fred, because when the user moves
	fast the mouse this messages is not generated. But we receive the
	WM_MOUSELEAVE message no matter if the mouse move fast or not. This
	approach make unnecessary handle the message WM_NCMOUSEMOVE. I also
	remove a redundant line in WM_MOUSELEAVE.

2015-03-23  Germán Arias <germanandre@gmx.es>

	* Source/win32/WIN32Server.m (-windowEventProc:, -process_mouse_event:):
	Add code to handle the case when the mouse leave the window, move over
	a nonclient area, update the cursor or when the user open a
	contextual menu. Also handle the first mouse movement inside the
	window and save the cursor if we should preserve it between different
	windows. Sometimes there is a problem with the cursor if the user