@@ -1,5 +1,11 @@
 2015-05-22  Fred Kiefer <FredKiefer@gmx.de>
 
+	* Source/cairo/CairoGState.m: Add support for image interpolation
+	setting in context.
+	Patch by Josh Freeman <gnustep_lists@twilightedge.com>
+
+2015-05-22  Fred Kiefer <FredKiefer@gmx.de>
+
 	* Source/gsc/GSGState.m (_fillRect:withPattern:): Add support for
 	patternPhase.
 	Patch by Josh Freeman <gnustep_lists@twilightedge.com>
